Fixed overlap issue between gameListObjects

--- a/chat-app/src/components/GameList/gameList.css
+++ b/chat-app/src/components/GameList/gameList.css
@@ -1,22 +1,41 @@
+.gameListStyle {
+    display:grid;
+    grid-template-columns: auto auto auto;
+    justify-items:center;
+    margin:20px
+}
+
 .gameListObject {
+    display:flex;
+    flex-direction: row;
+    margin:16px;
+    transition:margin 0.3s ease;
+}
+
+.gameContent {
     width:240px;
     height:400px;
-    margin:16px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
-    transition: margin 0.3s ease, box-shadow 0.3s ease;
+    box-shadow:0px 4px 4px rgba(0, 0, 0, 0.2);
+    transition:box-shadow 0.3s ease;
 }
 
 .gameListObject:hover {
     margin:8px;
-    box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.2)
 }
 
-.gameContent {
+.gameListObject:hover .gameContent {
+    box-shadow:0px 8px 8px rgba(0, 0, 0, 0.2)
+}
+
+.gameDetails {
     display:flex;
     flex-direction:column;
     justify-content:space-evenly;
     align-items:flex-start;
     padding:4px;
+}
+
+.gameExtendedContent {
 }
 
 .coverImageStyle {
@@ -25,8 +44,12 @@
     mask-image:linear-gradient(to bottom, black 75%, transparent)
 }
 
+.creatorImageStyle {
+    width:100px;
+    height:100px
+}
+
 .platformContainer {
-    position:absolute;
 }
 
 .platformTag {
